feat: move cache control from ChatMessages to Content